--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,9 @@ name = "web-panic"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[dependencies.web-sys]
+version = "0.3"
+features = ["Element"]
 
-[dependencies]
+[dev-dependencies.html]
+version = "0.6"
