Finish preparing release

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ description = "Panic handling in the browser (wasm)"
 repository = "https://github.com/AldaronLau/web_panic_hook"
 documentation = "https://docs.rs/web_panic_hook"
 homepage = "https://github.com/AldaronLau/web_panic_hook/blob/stable/CHANGELOG.md"
-include = ["/examples/", "/README.md", "/src/"]
+include = ["/examples/", "/README.md", "/src/", "/screenshot.png"]
 keywords = ["panic", "hook", "panic-hook"]
 categories = ["wasm", "web-programming"]
 readme = "README.md"
